--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -31,6 +31,9 @@
 		<action
 			android:id="@+id/action_navigation_home_to_ranking"
 			app:destination="@id/ranking" />
+		<action
+			android:id="@+id/action_navigation_home_to_travelCouponDetail"
+			app:destination="@id/travelCouponDetail" />
 	</fragment>
 
 	<fragment
@@ -124,7 +127,10 @@
 		 <action
 			 android:id="@+id/action_navigation_travel_to_travelHotCoupon"
 			 app:destination="@id/travelHotCoupon" />
-	 </fragment>
+		  <action
+			  android:id="@+id/action_navigation_travel_to_travelCouponDetail"
+			  app:destination="@id/travelCouponDetail" />
+	  </fragment>
 
 	<fragment
 		android:id="@+id/profileEdit"
@@ -207,15 +213,29 @@
 		android:id="@+id/travelCoupon"
 		android:name="com.protect.jikigo.ui.travel.TravelCouponFragment"
 		android:label="fragment_travel_coupon"
-		tools:layout="@layout/fragment_travel_coupon" >
-		<action
-			android:id="@+id/action_travelCoupon_to_travelCouponDetail"
-			app:destination="@id/travelCouponDetail" />
-	</fragment>
+		tools:layout="@layout/fragment_travel_coupon" />
 	<fragment
 		android:id="@+id/travelCouponDetail"
 		android:name="com.protect.jikigo.ui.travel.TravelCouponDetailFragment"
 		android:label="fragment_travel_coupon_detail"
-		tools:layout="@layout/fragment_travel_coupon_detail" />
+		tools:layout="@layout/fragment_travel_coupon_detail" >
+		<action
+			android:id="@+id/action_travelCouponDetail_to_travelPaymentBottomSheet"
+			app:destination="@id/travelPaymentBottomSheet" />
+	</fragment>
+	<fragment
+		android:id="@+id/travelPaymentComplete"
+		android:name="com.protect.jikigo.ui.travel.TravelPaymentCompleteFragment"
+		android:label="fragment_travel_payment_complete"
+		tools:layout="@layout/fragment_travel_payment_complete" />
+	<fragment
+		android:id="@+id/travelPaymentBottomSheet"
+		android:name="com.protect.jikigo.ui.travel.TravelPaymentBottomSheetFragment"
+		android:label="fragment_travel_payment_bottom_sheet"
+		tools:layout="@layout/fragment_travel_payment_bottom_sheet" >
+		<action
+			android:id="@+id/action_travelPaymentBottomSheet_to_travelPaymentComplete"
+			app:destination="@id/travelPaymentComplete" />
+	</fragment>
 
 </navigation>
