--- a/app/src/main/res/layout/fragment_news_environment.xml
+++ b/app/src/main/res/layout/fragment_news_environment.xml
@@ -19,7 +19,7 @@
 
         <!-- 툴바 -->
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_news_envorionment"
+            android:id="@+id/toolbar_news_environment"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@android:color/transparent"
@@ -36,7 +36,7 @@
             android:textSize="45sp"
             android:textStyle="bold"
             android:textColor="@android:color/black"
-            app:layout_constraintTop_toBottomOf="@id/toolbar_news_envorionment"
+            app:layout_constraintTop_toBottomOf="@id/toolbar_news_environment"
             app:layout_constraintStart_toStartOf="parent"
             android:paddingTop="12dp"
             android:paddingBottom="5dp"
@@ -48,13 +48,13 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:src="@drawable/img_environment"
-            app:layout_constraintTop_toBottomOf="@id/toolbar_news_envorionment"
+            app:layout_constraintTop_toBottomOf="@id/toolbar_news_environment"
             app:layout_constraintStart_toEndOf="@id/tv_news_envorionment_big_category_title"
-            app:layout_constraintBottom_toTopOf="@id/tab_news_envorionment"/>
+            app:layout_constraintBottom_toTopOf="@id/tab_news_environment"/>
 
         <!-- 탭 레이아웃 -->
         <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tab_news_envorionment"
+            android:id="@+id/tab_news_environment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#7A8FFF"
@@ -75,9 +75,9 @@
         <!-- 프래그먼트를 보여주기 위한 뷰페이저 -->
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vp_news_environment"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/tab_news_envorionment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toBottomOf="@id/tab_news_environment"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
