Design: 디자인, 레이아웃 배치 수정

--- a/app/src/main/res/layout/fragment_news_environment.xml
+++ b/app/src/main/res/layout/fragment_news_environment.xml
@@ -77,6 +77,7 @@
             android:id="@+id/vp_news_environment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#ffffff"
             app:layout_constraintTop_toBottomOf="@id/tab_news_environment"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
