--- a/app/src/main/res/layout/fragment_news_environment_all.xml
+++ b/app/src/main/res/layout/fragment_news_environment_all.xml
@@ -7,19 +7,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.home.news.NewsEnvironmentAllFragment">
 
-    <!-- 첫번째 뉴스 -->
-    <ImageView
-        android:id="@+id/iv_news_environment_all_first_image"
+    <!-- 두번째 뉴스 -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_news_environment_all_first_image"
         android:layout_width="0dp"
-        android:layout_height="180dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/img_today_news_home_tmp_1"
-        android:layout_marginTop="10dp"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="16dp"
+        android:layout_marginTop="15dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iv_content_news_environment_all_first_image"
+            android:layout_width="match_parent"
+            android:layout_height="230dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/img_today_news_home_tmp_1"/>
+    </androidx.cardview.widget.CardView>
+
 
     <TextView
         android:id="@+id/tv_news_environment_all_first_title"
@@ -32,7 +40,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        app:layout_constraintTop_toBottomOf="@id/iv_news_environment_all_first_image"
+        app:layout_constraintTop_toBottomOf="@id/cv_news_environment_all_first_image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -52,7 +60,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_news_environment_all_banner"
         android:layout_width="0dp"
-        android:layout_height="55dp"
+        android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
@@ -69,19 +77,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <ImageView
-            android:id="@+id/iv_news_environment_all_second_image"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_news_environment_all_second_image"
             android:layout_width="0dp"
-            android:layout_height="150dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/img_today_news_home_tmp_2"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="16dp"
             android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="7dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/iv_news_environment_all_third_image"
+            app:layout_constraintEnd_toStartOf="@id/cv_news_environment_all_third_image"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_weight="1" />
+            app:layout_constraintHorizontal_weight="1">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iv_content_news_environment_all_second_image"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_today_news_home_tmp_2" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/tv_news_environment_all_second_title"
@@ -92,9 +107,9 @@
             android:textStyle="bold"
             android:textColor="@android:color/black"
             android:layout_marginTop="5dp"
-            app:layout_constraintTop_toBottomOf="@id/iv_news_environment_all_second_image"
-            app:layout_constraintStart_toStartOf="@id/iv_news_environment_all_second_image"
-            app:layout_constraintEnd_toEndOf="@id/iv_news_environment_all_second_image" />
+            app:layout_constraintTop_toBottomOf="@id/cv_news_environment_all_second_image"
+            app:layout_constraintStart_toStartOf="@id/cv_news_environment_all_second_image"
+            app:layout_constraintEnd_toEndOf="@id/cv_news_environment_all_second_image" />
 
         <TextView
             android:id="@+id/tv_news_environment_all_second_date"
@@ -110,19 +125,26 @@
 
 
         <!-- 세번째 뉴스 -->
-        <ImageView
-            android:id="@+id/iv_news_environment_all_third_image"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_news_environment_all_third_image"
             android:layout_width="0dp"
-            android:layout_height="150dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/img_today_news_home_tmp_3"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="16dp"
             android:layout_marginTop="10dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="10dp"
-            app:layout_constraintStart_toEndOf="@id/iv_news_environment_all_second_image"
+            android:layout_marginStart="7dp"
+            android:layout_marginEnd="15dp"
+            app:layout_constraintStart_toEndOf="@id/cv_news_environment_all_second_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_weight="1" />
+            app:layout_constraintHorizontal_weight="1">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iv_content_news_environment_all_third_image"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_today_news_home_tmp_3" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/tv_news_environment_all_third_title"
@@ -133,9 +155,9 @@
             android:textStyle="bold"
             android:textColor="@android:color/black"
             android:layout_marginTop="5dp"
-            app:layout_constraintTop_toBottomOf="@id/iv_news_environment_all_third_image"
-            app:layout_constraintStart_toStartOf="@id/iv_news_environment_all_third_image"
-            app:layout_constraintEnd_toEndOf="@id/iv_news_environment_all_third_image" />
+            app:layout_constraintTop_toBottomOf="@id/cv_news_environment_all_third_image"
+            app:layout_constraintStart_toStartOf="@id/cv_news_environment_all_third_image"
+            app:layout_constraintEnd_toEndOf="@id/cv_news_environment_all_third_image" />
 
         <TextView
             android:id="@+id/tv_news_environment_all_third_date"
@@ -147,7 +169,7 @@
             android:layout_marginTop="5dp"
             app:layout_constraintTop_toBottomOf="@id/tv_news_environment_all_third_title"
             app:layout_constraintStart_toStartOf="@id/tv_news_environment_all_third_title"
-            app:layout_constraintEnd_toEndOf="@id/iv_news_environment_all_third_image" />
+            app:layout_constraintEnd_toEndOf="@id/cv_news_environment_all_third_image" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
