--- a/app/src/main/res/layout/fragment_travel_payment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_travel_payment_bottom_sheet.xml
@@ -168,6 +168,8 @@
 		android:text="결제하기"
 		android:textSize="20sp"
 		android:textStyle="bold"
+		android:textColor="@color/white"
+		android:backgroundTint="@color/primary"
 		app:cornerRadius="5dp"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
