--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -231,7 +231,7 @@
 		android:name="com.protect.jikigo.ui.travel.TravelPaymentCompleteFragment"
 		android:label="fragment_travel_payment_complete"
 		tools:layout="@layout/fragment_travel_payment_complete" />
-	<fragment
+	<dialog
 		android:id="@+id/travelPaymentBottomSheet"
 		android:name="com.protect.jikigo.ui.travel.TravelPaymentBottomSheetFragment"
 		android:label="fragment_travel_payment_bottom_sheet"
@@ -239,6 +239,6 @@
 		<action
 			android:id="@+id/action_travelPaymentBottomSheet_to_travelPaymentComplete"
 			app:destination="@id/travelPaymentComplete" />
-	</fragment>
+	</dialog>
 
 </navigation>
