--- a/app/src/main/res/layout/fragment_news_environment_air.xml
+++ b/app/src/main/res/layout/fragment_news_environment_air.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".ui.home.news.NewsEnvironmentAirFragment">
+    tools:context=".ui.home.news.NewsBesidesFragment">
 
     <!-- HOT TOPIC -->
     <LinearLayout
