--- a/app/src/main/res/layout/fragment_travel_search.xml
+++ b/app/src/main/res/layout/fragment_travel_search.xml
@@ -59,6 +59,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,14 +68,14 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingTop="16dp">
 
             <TextView
                 android:id="@+id/tv_no_result"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
                 android:text="'OOOOO' 상품이 없어요."
                 android:textColor="@color/gray_10"
                 android:textSize="16sp"
@@ -88,7 +89,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
                 android:text="최근검색어"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -102,7 +102,7 @@
                 android:layout_marginTop="4dp"
                 android:text="검색 내역이 없어요."
                 android:textColor="#A7A7AE"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_recent" />
 
@@ -119,112 +119,22 @@
                 <com.google.android.material.chip.ChipGroup
                     android:id="@+id/cg_history"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent">
-
-                    <com.google.android.material.chip.Chip
-                        android:id="@+id/chip_history1"
-                        style="@style/Widget.Material3.Chip.Input"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checkable="false"
-                        android:text="검색어1"
-                        android:textColor="@color/black"
-                        android:textSize="12sp"
-                        app:checkedIconEnabled="false"
-                        app:chipBackgroundColor="@color/gray_5"
-                        app:chipStrokeColor="@color/gray_5"
-                        app:closeIconSize="16dp"
-                        app:closeIconTint="@color/gray_50" />
-
-                    <com.google.android.material.chip.Chip
-                        android:id="@+id/chip_history2"
-                        style="@style/Widget.Material3.Chip.Input"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checkable="false"
-                        android:text="검색어2"
-                        android:textColor="@color/black"
-                        android:textSize="12sp"
-                        app:checkedIconEnabled="false"
-                        app:chipBackgroundColor="@color/gray_5"
-                        app:chipStrokeColor="@color/gray_5"
-                        app:closeIconSize="16dp"
-                        app:closeIconTint="@color/gray_50" />
-
-                    <com.google.android.material.chip.Chip
-                        android:id="@+id/chip_history3"
-                        style="@style/Widget.Material3.Chip.Input"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checkable="false"
-                        android:text="검색어3"
-                        android:textColor="@color/black"
-                        android:textSize="12sp"
-                        app:checkedIconEnabled="false"
-                        app:chipBackgroundColor="@color/gray_5"
-                        app:chipStrokeColor="@color/gray_5"
-                        app:closeIconSize="16dp"
-                        app:closeIconTint="@color/gray_50" />
-
-                    <com.google.android.material.chip.Chip
-                        android:id="@+id/chip_history4"
-                        style="@style/Widget.Material3.Chip.Input"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checkable="false"
-                        android:text="검색어4"
-                        android:textColor="@color/black"
-                        android:textSize="12sp"
-                        app:checkedIconEnabled="false"
-                        app:chipBackgroundColor="@color/gray_5"
-                        app:chipStrokeColor="@color/gray_5"
-                        app:closeIconSize="16dp"
-                        app:closeIconTint="@color/gray_50" />
-
-                    <com.google.android.material.chip.Chip
-                        android:id="@+id/chip_history5"
-                        style="@style/Widget.Material3.Chip.Input"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checkable="false"
-                        android:text="검색어5"
-                        android:textColor="@color/black"
-                        android:textSize="12sp"
-                        app:checkedIconEnabled="false"
-                        app:chipBackgroundColor="@color/gray_5"
-                        app:chipStrokeColor="@color/gray_5"
-                        app:closeIconSize="16dp"
-                        app:closeIconTint="@color/gray_50" />
-
-                    <com.google.android.material.chip.Chip
-                        android:id="@+id/chip_history6"
-                        style="@style/Widget.Material3.Chip.Input"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checkable="false"
-                        android:text="검색어 6"
-                        android:textColor="@color/black"
-                        android:textSize="12sp"
-                        app:checkedIconEnabled="false"
-                        app:chipBackgroundColor="@color/gray_5"
-                        app:chipStrokeColor="@color/gray_5"
-                        app:closeIconSize="16dp"
-                        app:closeIconTint="@color/gray_50" />
-
-                </com.google.android.material.chip.ChipGroup>
+                    android:layout_height="match_parent"
+                    android:paddingEnd="16dp" />
             </HorizontalScrollView>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_search_coupon_list"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
+                android:visibility="invisible"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/horizontalScrollView3"
+                app:layout_constraintTop_toTopOf="parent"
                 app:spanCount="2"
                 tools:listitem="@layout/item_coupon" />
 
