--- a/app/src/main/res/layout/fragment_find_new_pw.xml
+++ b/app/src/main/res/layout/fragment_find_new_pw.xml
@@ -11,27 +11,16 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="40dp"
-		android:layout_marginTop="100dp"
-		android:text="@string/new_password"
+		android:layout_marginTop="50dp"
+		android:text="@string/new_password_star"
 		android:textStyle="bold"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent" />
 
-	<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="5dp"
-		android:text="@string/common_star"
-		android:textColor="@color/red"
-		app:layout_constraintBottom_toBottomOf="@id/tv_find_new_pw_label"
-		app:layout_constraintStart_toEndOf="@id/tv_find_new_pw_label"
-		app:layout_constraintTop_toTopOf="@id/tv_find_new_pw_label" />
-
-
 	<com.google.android.material.textfield.TextInputLayout
 		android:id="@+id/et_find_new_pw"
 		android:layout_width="0dp"
-		android:layout_height="54sp"
+		android:layout_height="54dp"
 		android:layout_marginHorizontal="40dp"
 		android:layout_marginTop="5dp"
 		app:endIconMode="password_toggle"
@@ -43,33 +32,33 @@
 		<com.google.android.material.textfield.TextInputEditText
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:hint="@string/common_pw"
+			android:hint="@string/new_password"
 			android:inputType="textPassword"
 			android:maxLength="20"
 			android:textSize="14sp" />
 	</com.google.android.material.textfield.TextInputLayout>
 
 	<TextView
+		android:id="@+id/tv_find_new_pw_error"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/sign_up_error_pw"
+		android:textColor="@color/negative"
+		android:textSize="12sp"
+		android:visibility="gone"
+		app:layout_constraintStart_toStartOf="@id/et_find_new_pw"
+		app:layout_constraintTop_toBottomOf="@id/et_find_new_pw"
+		tools:visibility="visible" />
+
+	<TextView
 		android:id="@+id/tv_find_new_pw_check_label"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginStart="40dp"
-		android:layout_marginTop="30dp"
-		android:text="@string/new_password_check"
+		android:layout_marginTop="20dp"
+		android:text="@string/new_password_check_star"
 		android:textStyle="bold"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/et_find_new_pw" />
-
-	<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="5dp"
-		android:text="@string/common_star"
-		android:textColor="@color/red"
-		app:layout_constraintBottom_toBottomOf="@id/tv_find_new_pw_check_label"
-		app:layout_constraintStart_toEndOf="@id/tv_find_new_pw_check_label"
-		app:layout_constraintTop_toTopOf="@id/tv_find_new_pw_check_label" />
-
+		app:layout_constraintStart_toStartOf="@id/tv_find_new_pw_label"
+		app:layout_constraintTop_toBottomOf="@id/tv_find_new_pw_error" />
 
 	<com.google.android.material.textfield.TextInputLayout
 		android:id="@+id/et_find_new_pw_check"
@@ -86,11 +75,23 @@
 		<com.google.android.material.textfield.TextInputEditText
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:hint="@string/common_pw_check"
+			android:hint="@string/new_password"
 			android:inputType="textPassword"
 			android:maxLength="20"
 			android:textSize="14sp" />
 	</com.google.android.material.textfield.TextInputLayout>
+
+	<TextView
+		android:id="@+id/tv_error_new_pw"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/sign_up_error_pw_check"
+		android:textColor="@color/negative"
+		android:textSize="12sp"
+		android:visibility="gone"
+		app:layout_constraintStart_toStartOf="@id/et_find_new_pw_check"
+		app:layout_constraintTop_toBottomOf="@id/et_find_new_pw_check"
+		tools:visibility="visible" />
 
 	<androidx.appcompat.widget.AppCompatButton
 		android:id="@+id/btn_find_new_confirm"
@@ -98,10 +99,11 @@
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_marginHorizontal="40dp"
-		android:layout_marginTop="80dp"
+		android:layout_marginTop="40dp"
 		android:text="@string/new_password_setting"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/et_find_new_pw_check" />
+		app:layout_constraintTop_toBottomOf="@id/tv_error_new_pw" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
