--- a/app/src/main/res/layout/fragment_news_besides.xml
+++ b/app/src/main/res/layout/fragment_news_besides.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".ui.home.news.NewsBesidesFragment">
@@ -11,7 +11,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="662dp"
+        android:layout_height="wrap_content"
         tools:context=".ui.home.news.NewsBesidesFragment">
 
         <LinearLayout
