--- a/app/src/main/res/layout/row_latest_news.xml
+++ b/app/src/main/res/layout/row_latest_news.xml
@@ -2,27 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="12dp"
+    android:orientation="vertical"
     android:background="@android:color/white">
 
     <!-- 뉴스 썸네일 -->
-    <ImageView
-        android:id="@+id/iv_news_besides_thumbnail"
-        android:layout_width="110dp"
-        android:layout_height="80dp"
-        android:scaleType="centerCrop"
-        android:layout_gravity="center"
-        android:src="@drawable/img_today_news_home_tmp_1" />
+    <!--    <ImageView-->
+    <!--        android:id="@+id/iv_news_besides_thumbnail"-->
+    <!--        android:layout_width="110dp"-->
+    <!--        android:layout_height="80dp"-->
+    <!--        android:scaleType="centerCrop"-->
+    <!--        android:layout_gravity="center"-->
+    <!--        android:src="@drawable/img_today_news_home_tmp_1" />-->
 
-    <!-- 뉴스 정보 -->
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:orientation="vertical"
-        android:paddingStart="12dp">
-
+        android:padding="12dp">
         <!-- 뉴스 제목 (최대 1줄) -->
         <TextView
             android:id="@+id/tv_news_besides_title"
@@ -56,4 +52,11 @@
             android:textColor="#707070"
             android:layout_marginTop="5dp" />
     </LinearLayout>
+
+    <!-- 구분선 -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#D9D9D9"
+        android:layout_marginTop="8dp"/>
 </LinearLayout>
