--- a/app/src/main/res/layout/fragment_news_all.xml
+++ b/app/src/main/res/layout/fragment_news_all.xml
@@ -60,19 +60,21 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_news_all_banner"
         android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="12dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         app:layout_constraintTop_toBottomOf="@id/tv_news_all_first_date"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/cl_news_all_environment_all_and_third_news"/>
 
     <!-- 두번째 뉴스 -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_news_all_environment_all_and_third_news"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/vp_news_all_banner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
